# django-model-privacy-mixin

./: README.md  install  setup.cfg  test-install
src/django_model_privacy_mixin/: __init__.py
src/django_model_privacy_mixin.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
