[metadata]
name = django_model_privacy_mixin
version = 0.1
author = Bernd Wechner
author_email = bwechner@yahoo.com
description = Django Model MixIn providing flexible field privacy control
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bernd-wechner/django-model-privacy-mixin
project_urls =
    Bug Tracker = https://github.com/bernd-wechner/django-model-privacy-mixin/issues
classifiers =
    Programming Language :: Python :: 3
    License :: Freely Distributable
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Framework :: Django :: 3.2
    Intended Audience :: System Administrators
    Topic :: Software Development :: Libraries :: Python Modules

[options]
install_requires =
    django-currentuser >= 0.5.3
    django-bitfield >= 2.0.1
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
